[package]
name = "socks5lib"
version = "0.1.0"
authors = ["magicalne"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1.10"
tracing-subscriber = "0.2"
pin-project = "1.0.7"
futures = "0.3.14"
bytes = "1.0.1"